--- a/html/PBWIV/PBWIV060000.html
+++ b/html/PBWIV/PBWIV060000.html
@@ -104,6 +104,7 @@
 					<!-- //tab-content -->
 
 					<div class="stock-index">
+						<div class="body-caption px4 ar mt16">2024-10-15 기준</div>
 						<div class="stock-index-list">
 							<h2 class="headline-small ac mt40">섹터지수</h2>
 							<div class="px0 mt24 mb40 content-fluid">
