--- a/html/PBWIV/PBWIV080000.html
+++ b/html/PBWIV/PBWIV080000.html
@@ -56,6 +56,11 @@
 	<script src="/resources/js/ui-script.js"></script>
 	<script src="/resources/js/ui-temp.js"></script> <!-- 개발서버에서 include 제외해주세요 -->
 	<!-- //ui source -->
+	<style>
+		.ui-datepicker-current-day {
+			background-color: red;
+		}
+	</style>
 </head>
 
 <body>
@@ -530,6 +535,7 @@
 	<!-- //main -->
 
 	<script>
+		let currentDate = '';
 		var datepickerWeekend = {
 			init: function() {
 				$datepicker = $('.datepicker-weekend');
@@ -539,6 +545,10 @@
 			},
 			select: function() {
 				setTimeout(function() {
+					console.log($datepicker)
+					if (!$datepicker.hasClass('datepicker-collapsed')) {
+						$("#datepicker_schedule").datepicker("setDate", currentDate);
+					}
 					$datepicker.addClass('datepicker-collapsed');
 					$selectWeek.addClass('thisWeek');
 					$selectWeek.siblings('tr').hide();
@@ -549,7 +559,7 @@
 			selectPrev: function() {
 				if ($selectWeek.is(':first-child')) {
 					$datepicker.find("[data-handler='prev']").trigger('click');
-					if ($datepicker.find('table tbody tr:nth-last-child(1) td').hasClass('ui-datepicker-unselectable')) {
+					if ($datepicker.find('table tbody tr:nth-last-child(1) td').hasClass('ui-datepicker-other-month')) {
 						$datepicker.find('table tbody tr:nth-last-child(2)').addClass('thisWeek').siblings('').removeClass('thisWeek');
 					} else {
 						$datepicker.find('table tbody tr:nth-last-child(1)').addClass('thisWeek').siblings('').removeClass('thisWeek');
@@ -577,7 +587,7 @@
 			selectNext: function() {
 				if ($selectWeek.is(':last-child')) {
 					$datepicker.find("[data-handler='next']").trigger('click');
-					if ($datepicker.find('table tbody tr:nth-child(1) td').hasClass('ui-datepicker-unselectable')) {
+					if ($datepicker.find('table tbody tr:nth-child(1) td').hasClass('ui-datepicker-other-month')) {
 						$datepicker.find('table tbody tr:nth-child(2)').addClass('thisWeek').siblings('').removeClass('thisWeek');
 					} else {
 						$datepicker.find('table tbody tr:nth-child(1)').addClass('thisWeek').siblings('').removeClass('thisWeek');
@@ -646,6 +656,7 @@
 				showOtherMonths: true,
 				selectOtherMonths: true,
 				onSelect: function(date, dp) {
+					currentDate = date;
 					datepickerWeekend.select();
 				},
 				onChangeMonthYear: function(year, month, dp) {},
