--- a/html/PBWMA/PBWMA000000.html
+++ b/html/PBWMA/PBWMA000000.html
@@ -520,7 +520,7 @@
 				el: ".swiper-pagination",
 			}
 		});
-		// MicroModal.show('modal-notice');
+		MicroModal.show('modal-notice');
 	</script>
 </body>
 
