--- a/html/PBWFU/PBWFU040000.html
+++ b/html/PBWFU/PBWFU040000.html
@@ -145,11 +145,11 @@
 										<dt>3개월</dt>
 										<dd>+888.88%</dd>
 									</div>
-									<div class="list fall">
+									<div class="list">
 										<dt>6개월</dt>
 										<dd>-888.88%</dd>
 									</div>
-									<div class="list steady">
+									<div class="list">
 										<dt>12개월</dt>
 										<dd>-888.88%</dd>
 									</div>
@@ -166,9 +166,9 @@
 								<h3 class="title-large fw-700">기준가</h3>
 								<dl class="status-list">
 									<dt>1,813.84</dt>
-									<dd class="rise" aria-label="상승">888.8%</dd>
-									<!-- <dd class="fall" aria-label="하락">888.8%</dd>
-									<dd class="steady" aria-label="보합">000.0%</dd> -->
+									<dd class="rise" aria-label="상승">88.88</dd>
+									<!-- <dd class="fall" aria-label="하락">88.88</dd> -->
+									<!-- <dd class="steady" aria-label="보합">0</dd> -->
 								</dl>
 							</div>
 						</div>
