--- a/html/PBWMA/PBWMA010000.html
+++ b/html/PBWMA/PBWMA010000.html
@@ -147,6 +147,7 @@
 							<figcaption>
 								<span class="body-medium">수익률 BEST 키워드의 펀드가 궁금하신가요?</span>
 								<strong class="headline-small mt8">투자성향 분석 없이 <br> 원하는 펀드를 찾아 보세요!</strong>
+								<span class="body-medium mt8">관심 펀드를 등록하면 수익률을 비교해드려요!</span>
 								<a href="#" class="btn-medium btn-primary btn-round mt24">펀드 찾기<i class="ico-search"></i></a>
 							</figcaption>
 						</figure>
