--- a/html/PBWFU/PBWFU040000.html
+++ b/html/PBWFU/PBWFU040000.html
@@ -373,6 +373,7 @@
 								<li>최근에 설정(운용 시작)되어 설정기간이 짧은 펀드는 기간별 수익률이 존재하지 않을 수 있습니다.</li>
 								<li>BM(벤치마크)은 제로인이 부여한 BM으로 투자설명서의 BM 또는 비교지수와 다를 수 있습니다.</li>
 								<li>제로인에서 제공하는 데이터 및 분석자료는 단순 정보제공을 목적으로 하며, 특정 펀드에 대한 투자를 권고하거나 거래를 목적으로 하지 않습니다.</li>
+								<li>제로인의 제공내용은 운용사의 공시 등 신뢰할만한 판단자료로 얻어진 것이나, 그 정확성이나 안전성을 당사가 보증하는 것은 아닙니다. 따라서 본 정보에 의존해 행해지는 행위로 인해 발생하는 결과에 대해 당사는 책임을 지지 않습니다.</li>
 								<li>제로인에서 제공하는 데이터 및 분석자료는 무단으로 배포하거나 재활용 할 수 없습니다.</li>
 							</ul>
 						</div>
