--- a/html/PBWME/PBWME010000.html
+++ b/html/PBWME/PBWME010000.html
@@ -90,7 +90,7 @@
 				<div class="content">
 
 
-					<p class="description info body-small fc-typography-caption fw-400 my16">알림이 오지 않는다면, 휴대폰의 설정 -&gt; 알림 -&gt; RM/PM WON(가칭)에서 알림을 허용해주세요.</p>
+					<p class="description info body-small fc-typography-caption fw-400 my16">알림이 오지 않는다면, 휴대폰의 설정&gt;알림&gt;WON Click에서 알림을 허용해주세요.</p>
 
 					<!-- group-form -->
 					<div class="group-form">
@@ -132,7 +132,7 @@
 	</main>
 	<!-- //main -->
 	<script>
-		$swal.fire02('Push 알림이 꺼져 있습니다. <br> 휴대폰의 설정->알림->RM/PB WON(가칭)에서 알림을 허용해주세요.', 'caution', '예', true, '아니요');
+		$swal.fire02('Push 알림이 꺼져 있습니다. <br> 알림이 오지 않는다면, 휴대폰의 설정&gt;알림&gt;WON Click에서 알림을 허용해주세요.', 'caution', '예', true, '아니요');
 	</script>
 
 </body>
