--- a/html/PBWMA/PBWMA000000.html
+++ b/html/PBWMA/PBWMA000000.html
@@ -331,31 +331,37 @@
 						<div class="main-figure-list">
 							<ul class="flex-wrap">
 								<li>
-									<figure>
-										<picture>
-											<source srcset="/resources/images/PBWMA/ico_fig_main_list01.svg">
-											<img src="/resources/images/PBWMA/ico_fig_main_list01.svg" alt="">
-										</picture>
-										<figcaption>수익률 BEST</figcaption>
-									</figure>
+									<a href="javascript:void(0);">
+										<figure>
+											<picture>
+												<source srcset="/resources/images/PBWMA/ico_fig_main_list01.svg">
+												<img src="/resources/images/PBWMA/ico_fig_main_list01.svg" alt="">
+											</picture>
+											<figcaption>수익률 BEST</figcaption>
+										</figure>
+									</a>
 								</li>
 								<li>
-									<figure>
-										<picture>
-											<source srcset="/resources/images/PBWMA/ico_fig_main_list02.svg">
-											<img src="/resources/images/PBWMA/ico_fig_main_list02.svg" alt="">
-										</picture>
-										<figcaption>판매 BEST</figcaption>
-									</figure>
+									<a href="">
+										<figure>
+											<picture>
+												<source srcset="/resources/images/PBWMA/ico_fig_main_list02.svg">
+												<img src="/resources/images/PBWMA/ico_fig_main_list02.svg" alt="">
+											</picture>
+											<figcaption>판매 BEST</figcaption>
+										</figure>
+									</a>
 								</li>
 								<li>
-									<figure>
-										<picture>
-											<source srcset="/resources/images/PBWMA/ico_fig_main_list03.svg">
-											<img src="/resources/images/PBWMA/ico_fig_main_list03.svg" alt="">
-										</picture>
-										<figcaption>이달의 추천</figcaption>
-									</figure>
+									<a href="">
+										<figure>
+											<picture>
+												<source srcset="/resources/images/PBWMA/ico_fig_main_list03.svg">
+												<img src="/resources/images/PBWMA/ico_fig_main_list03.svg" alt="">
+											</picture>
+											<figcaption>이달의 추천</figcaption>
+										</figure>
+									</a>
 								</li>
 							</ul>
 						</div>
@@ -448,7 +454,7 @@
 						</a>
 					</li>
 					<li class="list04">
-						<a href="#">
+						<a href="none">
 							<div class="icon"></div>
 							<strong>금융+</strong>
 						</a>
