--- a/html/PBWCH/PBWCH009902_noresult.html
+++ b/html/PBWCH/PBWCH009902_noresult.html
@@ -128,7 +128,7 @@
 									<div class="label"></div>
 									<div class="search-history-back"><button type="button" aria-label="검색메뉴 닫기"></button></div>
 									<div class="input-wrap input-btn">
-										<input type="text" placeholder="펀드/지수명으로 검색해 보세요." aria-label="검색">
+										<input type="text" placeholder="펀드 또는 지수 검색" aria-label="검색">
 										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 										<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
 									</div>
@@ -153,7 +153,7 @@
 
 
 
-						<p class="description caution body-small fc-typography-caption mt16">혹시 KOSPI를 코스피로 검색하셨나요? <br> 지수는 아래에서 선택해주세요.</p>
+						<p class="description info body-small fc-typography-caption mt16">비교하고 싶은 펀드/지수를 아래에서 선택해 주세요.</p>
 
 						<div class="stroke content-fluid stroke4 mt16"></div>
 						<!-- group-form -->
