--- a/html/PBWFU/PBWFU020000.html
+++ b/html/PBWFU/PBWFU020000.html
@@ -96,6 +96,12 @@
 						}
 					</style>
 
+					<!-- snackbar-content -->
+					<div class="snackbar-content is-sticky">
+						<button type="button" class="fab fab-secondary fab-circle" aria-label="최상단으로 이동"><i class="ico-gototop"></i></button>
+					</div>
+					<!-- //snackbar-content -->
+
 					<div class="fund-result">
 						<!-- fund-card-list -->
 						<div class="fund-card-list">
@@ -207,6 +213,8 @@
 
 					</div>
 
+					<div class="content-padding"></div>
+
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
 						<div class="bottom-btn-title">
@@ -223,8 +231,10 @@
 					<!-- //bottom-btn -->
 
 
+
 				</div>
 				<!-- //content -->
+
 			</div>
 			<!-- //container -->
 
