--- a/html/PBWFU/PBWFU040000.html
+++ b/html/PBWFU/PBWFU040000.html
@@ -173,7 +173,7 @@
 							</div>
 						</div>
 
-						<p class="description info body-small fc-typography-caption mt16">투자대상, 투자에 따른 위험, 위험등급, 수수료는 「금융소비자보호법」 제19조 제1항에서 규정하고 있는 중요한 사항입니다.</p>
+						<p class="description info body-small fc-typography-caption mt16 mb40">투자대상, 투자에 따른 위험, 위험등급, 수수료는 「금융소비자보호법」 제19조 제1항에서 규정하고 있는 중요한 사항입니다.</p>
 
 						<div class="fund-detail-info content-fluid mt40">
 							<h4 class="headline-small">상품 특징</h4>
