--- a/html/PBWCH/PBWCH009902_result.html
+++ b/html/PBWCH/PBWCH009902_result.html
@@ -127,7 +127,7 @@
 									<div class="label"></div>
 									<div class="search-history-back"><button type="button" aria-label="검색메뉴 닫기"></button></div>
 									<div class="input-wrap input-btn">
-										<input type="text" placeholder="펀드/지수명으로 검색해 보세요." aria-label="검색">
+										<input type="text" placeholder="펀드 또는 지수 검색" aria-label="검색">
 										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 										<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
 									</div>
