--- a/html/PBWFU/PBWFU030000.html
+++ b/html/PBWFU/PBWFU030000.html
@@ -96,6 +96,12 @@
 						}
 					</style>
 
+					<!-- snackbar-content -->
+					<div class="snackbar-content is-sticky">
+						<button type="button" class="fab fab-secondary fab-circle" aria-label="최상단으로 이동"><i class="ico-gototop"></i></button>
+					</div>
+					<!-- //snackbar-content -->
+
 					<div class="fund-result">
 
 						<!-- fund-card-list -->
@@ -211,6 +217,8 @@
 						<!-- //fund-card-list -->
 
 					</div>
+
+					<div class="content-padding"></div>
 
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
