--- a/html/PBWIV/PBWIV080000.html
+++ b/html/PBWIV/PBWIV080000.html
@@ -57,9 +57,9 @@
 	<script src="/resources/js/ui-temp.js"></script> <!-- 개발서버에서 include 제외해주세요 -->
 	<!-- //ui source -->
 	<style>
-		.ui-datepicker-current-day {
+		/* .ui-datepicker-current-day {
 			background-color: red;
-		}
+		} */
 	</style>
 </head>
 
@@ -98,10 +98,11 @@
 							background-color: var(--background-bg_lightGray);
 						}
 
+						/* 
 						.datepicker-wrap.datepicker-collapsed .ui-datepicker-calendar td.ui-datepicker-other-month span,
 						.datepicker-wrap.datepicker-collapsed .ui-datepicker-calendar td.ui-datepicker-other-month a {
 							color: inherit;
-						}
+						} */
 
 						.datepicker-collapsed .ui-priority-secondary,
 						.datepicker-collapsed .ui-widget-content .ui-priority-secondary,
@@ -658,6 +659,7 @@
 				onSelect: function(date, dp) {
 					currentDate = date;
 					datepickerWeekend.select();
+					console.log(1)
 				},
 				onChangeMonthYear: function(year, month, dp) {},
 				beforeShowDay: function(date) {
