--- a/html/PBWAD/PBWAD000000.html
+++ b/html/PBWAD/PBWAD000000.html
@@ -127,6 +127,7 @@
 									<p class="validate-text"></p>
 								</div>
 							</div>
+							<p class="description info body-small fc-typography-caption mt8">등록자, 고객명, 회사는 정확히 일치하는 결과만 검색됩니다.</p>
 						</div>
 					</div>
 					<!-- //group-form -->
