--- a/html/PBWFU/PBWFU020000.html
+++ b/html/PBWFU/PBWFU020000.html
@@ -98,7 +98,7 @@
 
 					<!-- snackbar-content -->
 					<div class="snackbar-content is-sticky">
-						<button type="button" class="fab fab-secondary fab-circle" aria-label="최상단으로 이동"><i class="ico-gototop"></i></button>
+						<button type="button" class="fab fab-secondary fab-circle" aria-label="최상단으로 이동" id="gototop"><i class="ico-gototop"></i></button>
 					</div>
 					<!-- //snackbar-content -->
 
