--- a/html/PBWCL/PBWCL070000_tab02.html
+++ b/html/PBWCL/PBWCL070000_tab02.html
@@ -128,8 +128,8 @@
 								<h2 class="headline-small">기업 등급</h2>
 
 								<div class="grade-wrap mt24">
-									<div class="grade-circle">
-										<div class="BBB">BBB+</div>
+									<div class="grade-circle rate-BBB">
+										<div class="rate">BBB+</div>
 									</div>
 									<dl>
 										<div class="list">
