--- a/html/PBWFU/PBWFU010000.html
+++ b/html/PBWFU/PBWFU010000.html
@@ -257,6 +257,19 @@
 
 
 
+		<div class="bottom-btn" style="display:none;">
+			<div class="bottom-btn-title">
+				<strong class="title-medium">2개의 펀드를 담아 비교하세요.</strong>
+			</div>
+			<div class="btn-wrap btn-nowrap">
+				<button type="button" class="btn-xsmall btn-primary btn-round"><span>피델리티글로벌배당인컴증권</span><i class="ico-close-16"></i></button>
+				<button type="button" class="btn-xsmall btn-outlined btn-round btn-border-dashed"><i class="ico-add"></i><span>비교할 펀드 추가</span></button>
+			</div>
+			<div class="btn-wrap">
+				<button type="button" class="btn-medium btn-primary">비교하기</button>
+			</div>
+		</div>
+
 
 
 	</main>
