--- a/html/PBWIV/PBWIV080000.html
+++ b/html/PBWIV/PBWIV080000.html
@@ -51,7 +51,6 @@
 	<link rel="stylesheet" href="/resources/css/ui-content.css">
 	<link rel="stylesheet" href="/resources/css/ui-bscard.css">
 	<link rel="stylesheet" href="/resources/css/ui-plugins.css">
-
 	<link rel="stylesheet" href="/resources/css/ui-skeletone.css">
 	<link rel="stylesheet" href="/resources/css/ui-mediaquery.css">
 	<script src="/resources/js/ui-script.js"></script>
@@ -99,11 +98,11 @@
 							background-color: var(--background-bg_lightGray);
 						}
 
-
+						/* 
 						.datepicker-wrap.datepicker-collapsed .ui-datepicker-calendar td.ui-datepicker-other-month span,
 						.datepicker-wrap.datepicker-collapsed .ui-datepicker-calendar td.ui-datepicker-other-month a {
 							color: inherit;
-						}
+						} */
 
 						.datepicker-collapsed .ui-priority-secondary,
 						.datepicker-collapsed .ui-widget-content .ui-priority-secondary,
@@ -547,8 +546,7 @@
 			},
 			select: function() {
 				setTimeout(function() {
-					console.log($datepicker)
-					if (!$datepicker.hasClass('datepicker-collapsed')) {
+					if ($datepicker.find('.ui-datepicker-other-month').hasClass('ui-datepicker-current-day')) {
 						$("#datepicker_schedule").datepicker("setDate", currentDate);
 					}
 					$selectWeek.siblings('tr').hide();
@@ -660,7 +658,6 @@
 				onSelect: function(date, dp) {
 					currentDate = date;
 					datepickerWeekend.select();
-					console.log(1)
 				},
 				onChangeMonthYear: function(year, month, dp) {},
 				beforeShowDay: function(date) {
