--- a/html/PBWFU/PBWFU040000.html
+++ b/html/PBWFU/PBWFU040000.html
@@ -246,7 +246,7 @@
 							<!-- tab-content -->
 							<div class="tab-content">
 								<ul class="tab-list tab-button" role="tablist">
-									<li class="tab tab-active"><a role="tab" href="#">1개월</a></li>
+									<li class="tab tab-active"><a role="tab" href="#" onclick="Windows.open(uri)">1개월</a></li>
 									<li class="tab"><a role="tab" href="#">3개월</a></li>
 									<li class="tab"><a role="tab" href="#">6개월</a></li>
 									<li class="tab"><a role="tab" href="#">12개월</a></li>
@@ -289,7 +289,7 @@
 										<div class="th">
 											<div class="group gap2 py0 j-start">
 												<div>선취 수수료</div>
-												<button type="button" class="d-flex" data-tippy="펀드 매수 시 지불하는 수수료입니다."><i class="icon-only icon-14 icon-info bg-status-info"></i></button>
+												<button type="button" class="d-flex" data-tippy="펀드 매수 시 지불하는 수수료입니다."><i class="icon-only icon-16 icon-tooltip bg-icon-gray_1"></i></button>
 											</div>
 
 										</div>
@@ -307,7 +307,7 @@
 										<div class="th">
 											<div class="group gap2 py0 j-start">
 												<div>환매 수수료</div>
-												<button type="button" class="d-flex" data-tippy="계약기간 이전 중도에 펀드를 환매할 시 <br> 발생하는 수수료 입니다."><i class="icon-only icon-14 icon-info bg-status-info"></i></button>
+												<button type="button" class="d-flex" data-tippy="계약기간 이전 중도에 펀드를 환매할 시 <br> 발생하는 수수료 입니다."><i class="icon-only icon-16 icon-tooltip bg-icon-gray_1"></i></button>
 
 											</div>
 										</div>
