--- a/html/PBWIV/PBWIV080002.html
+++ b/html/PBWIV/PBWIV080002.html
@@ -476,7 +476,7 @@
 							</div>
 						</div>
 
-						<p class="description info body-small fs-14 fc-typography-caption fw-400 mt40">지표 일정은 한국시간 기준입니다. <br> Bloomberg와 투자상품전략부의 칼럼을 참조합니다. <br> 일정은 월 1회, 세부 내용은 주 1회 업데이트 됩니다. <br> 중요도는 인베스팅닷컴 데이터를 참조합니다.</p>
+						<p class="description info body-small fs-14 fc-typography-caption fw-400 mt40">지표 일정은 한국시간 기준입니다. <br> Bloomberg와 WM솔루션부의 칼럼을 참조합니다. <br> 일정은 월 1회, 세부 내용은 주 1회 업데이트 됩니다. <br> 중요도는 인베스팅닷컴 데이터를 참조합니다.</p>
 
 
 					</div>
