--- a/html/PBWFI/PBWFI040000.html
+++ b/html/PBWFI/PBWFI040000.html
@@ -108,7 +108,7 @@
 
 					<!-- form -->
 					<div class="form mt40">
-						<div class="form-exchange">
+						<div class="form-exchange block">
 							<div class="label">
 								<button class="flag flag-us" data-micromodal-trigger="modal-select"><strong>USD</strong><span>미국 달러</span></button>
 								<!-- <button class="flag noflag" data-micromodal-trigger="modal-select"><strong>USD</strong><span>미국 달러</span></button> -->
@@ -123,8 +123,8 @@
 
 					<!-- form -->
 					<div class="form mt16">
-						<div class="form-exchange">
-							<div class="label">환율우대율<i class="icon-only icon-24 icon-percent bg-icon-default"></i></div>
+						<div class="form-exchange block">
+							<div class="label j-start">환율우대율<i class="icon-only icon-24 icon-percent bg-icon-default"></i></div>
 							<div class="ex-input-wrap d-flex">
 								<button type="button" class="anchor chevron anchor-fluid" data-placeholder="없음" data-micromodal-trigger="modal-alert1"></button>
 							</div>
@@ -140,7 +140,7 @@
 
 					<!-- form -->
 					<div class="form mt16">
-						<div class="form-exchange" style="border-bottom-left-radius:0;border-bottom-right-radius:0;">
+						<div class="form-exchange block" style="border-bottom-left-radius:0;border-bottom-right-radius:0;">
 							<div class="label">
 								<span class="flag flag-kr"><strong>KRW</strong><span>대한민국</span></span>
 							</div>
@@ -149,8 +149,8 @@
 								<span>1,427.30원</span>
 							</div>
 						</div>
-						<div class="form-exchange" style="border-top-left-radius:0;border-top-right-radius:0;">
-							<div class="label"><i class="icon-only icon-24 icon-calculator bg-icon-gray_1"></i>손익정보</div>
+						<div class="form-exchange block" style="border-top-left-radius:0;border-top-right-radius:0;">
+							<div class="label j-start"><i class="icon-only icon-24 icon-calculator bg-icon-gray_1"></i>손익정보</div>
 							<div class="ex-input-wrap">
 								<input type="text" readonly value="12,345" class="fc-brandPrimary-blue600">
 								<span>1만2,345원</span>
