--- a/html/PBWIV/PBWIV080002.html
+++ b/html/PBWIV/PBWIV080002.html
@@ -96,7 +96,6 @@
 					</style>
 
 					<div class="content-fluid bg-surface-surface">
-						<!-- group-form -->
 						<div class="group-form mt24">
 							<div class="group-content">
 								<div class="form">
@@ -111,6 +110,7 @@
 							</div>
 						</div>
 						<!-- //group-form -->
+
 						<!-- group-form -->
 						<div class="group-form mt24">
 							<div class="group-content">
@@ -125,6 +125,24 @@
 							</div>
 						</div>
 						<!-- //group-form -->
+						<!-- group-form -->
+						<div class="group-form mt24">
+							<div class="group-title">
+								<strong class="title-medium">중요도</strong>
+							</div>
+
+							<div class="group-content">
+								<div class="form">
+									<div class="label"></div>
+									<div class="inp inp-board">
+										<input type="checkbox" class="fc-brandPrimary-blue400" checked aria-label="&#9733;&#9733;&#9733;">
+										<input type="checkbox" class="fc-brandPrimary-blue400" checked aria-label="&#9733;&#9733;">
+										<input type="checkbox" class="fc-brandPrimary-blue400" checked aria-label="&#9733;">
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- group-form -->
 						<!-- btn-wrap -->
 						<div class="btn-wrap pt40 pb24">
 							<button type="button" class="btn-medium btn-primary"><i class="ico-search"></i>검색</button>
