--- a/html/PBWIV/PBWIV010000.html
+++ b/html/PBWIV/PBWIV010000.html
@@ -114,14 +114,14 @@
 					<div class="stock-index">
 						<div class="body-caption px4 ar mt16">2024-10-15 01:00 기준</div>
 
-						<div class="stock-index-core mt8">
-							<ul>
+						<div class="stock-index-core mt8 content-fluid px0">
+							<ul class="overflow-list gap0 px16">
 								<li>
 									<a href="#">
 										<dl>
 											<dt>코스피 <i class="live-on" aria-label="실시간"></i></dt>
 											<dd>
-												<strong>9,999.99</strong>
+												<strong>19,999.99</strong>
 												<div class="stock rise" aria-label="등락폭(상승)">888.88</div>
 											</dd>
 											<dd>
@@ -135,7 +135,7 @@
 										<dl>
 											<dt>코스닥 <i class="live-off" aria-label="비 실시간"></i></dt>
 											<dd>
-												<strong>9,999.99</strong>
+												<strong>19,999.99</strong>
 												<div class="stock fall" aria-label="등락폭(하락)">888.88</div>
 											</dd>
 											<dd>
@@ -149,7 +149,7 @@
 										<dl>
 											<dt>미국 USD <i class="live-on" aria-label="실시간"></i></dt>
 											<dd>
-												<strong>9,999.99</strong>
+												<strong>19,999.99</strong>
 												<div class="stock steady" aria-label="등락폭(보합)">00.00</div>
 											</dd>
 											<dd>
