--- a/html/PBWIV/PBWIV010001.html
+++ b/html/PBWIV/PBWIV010001.html
@@ -166,21 +166,21 @@
 							</div>
 
 							<div class="stroke px0 mt32"></div>
-							<dl class="group pb0">
+							<dl class="group pb0 flex-wrap">
 								<dt class="fs-18 fw-400 px-4">기초종가</dt>
-								<dd class="fs-18 fw-400 fc-status-info">9999.99</dd>
+								<dd class="fs-18 fw-400 fc-status-info mlauto">9999.99</dd>
 							</dl>
-							<dl class="group pb0 pt12">
+							<dl class="group pb0 pt12 flex-wrap">
 								<dt class="fs-18 fw-400 px-4">기말종가</dt>
-								<dd class="fs-18 fw-400 fc-status-info">9999.99</dd>
+								<dd class="fs-18 fw-400 fc-status-info mlauto">9999.99</dd>
 							</dl>
-							<dl class="group pb0 pt12">
+							<dl class="group pb0 pt12 flex-wrap">
 								<dt class="fs-18 fw-400 px-4">기간 최고(일)</dt>
-								<dd class="fs-18 fw-400 fc-status-info">9999.99(2024-11-21)</dd>
+								<dd class="fs-18 fw-400 fc-status-info mlauto">9999.99(2024-11-21)</dd>
 							</dl>
-							<dl class="group pb0 pt12">
+							<dl class="group pb0 pt12 flex-wrap">
 								<dt class="fs-18 fw-400 px-4">기간 최저(일)</dt>
-								<dd class="fs-18 fw-400 fc-status-info">9999.99(2024-11-21)</dd>
+								<dd class="fs-18 fw-400 fc-status-info mlauto">9999.99(2024-11-21)</dd>
 							</dl>
 
 							<div class="stroke px0 mt24"></div>
