--- a/html/index.html
+++ b/html/index.html
@@ -391,114 +391,6 @@
 						<td>Variable</td>
 						<td class="al article"><a href="" class="link inner-arrow">component_variable</a></td>
 					</tr>
-
-					<!-- <tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>input</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_input</a></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>card</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_card</a></td>
-					</tr>
-					
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>section</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_section</a></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>bottom nav</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_bottomnav</a></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>bottom btn</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_bottombtn</a></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>layer popup</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_layerpopup</a></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>modal select</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_modal_select</a></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>work label</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_work_label</a></td>
-					</tr> -->
-				</tbody>
-				<tbody data-folder="plugins">
-					<tr>
-						<td>Plugins</td>
-						<td>modal</td>
-						<td></td>
-						<td></td>
-						<td>modal layer popup</td>
-						<td class="al article"><a href="" class="link inner-arrow">modal</a></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td>sweetalert2</td>
-						<td></td>
-						<td></td>
-						<td>alert layer popup</td>
-						<td class="al article"><a href="" class="link inner-arrow">sweetalert2</a></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td>sortable</td>
-						<td></td>
-						<td></td>
-						<td>main portlet</td>
-						<td class="al article"><a href="" class="link inner-arrow">sortable</a></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td>tippyjs</td>
-						<td></td>
-						<td></td>
-						<td>tooltip</td>
-						<td class="al article"><a href="" class="link inner-arrow">tippyjs</a></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td>toastr</td>
-						<td></td>
-						<td></td>
-						<td>toast popup</td>
-						<td class="al article"><a href="" class="link inner-arrow">toastr</a></td>
-					</tr>
 				</tbody>
 				<tbody data-folder="PBWMA">
 					<tr>
@@ -961,6 +853,14 @@
 						<td></td>
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWFI040000</a></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>환율계산기 V2</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWFI040000_V2</a></td>
 					</tr>
 					<tr>
 						<td></td>
