--- a/html/PBWLO/PBWLO01002_02.html
+++ b/html/PBWLO/PBWLO01002_02.html
@@ -101,8 +101,11 @@
 									</div>
 
 									<div class="btn-wrap p0">
-										<a href="#" class="anchor underline fs-15">로그인 재설정</a>
+										<a href="#" class="anchor underline fs-15">생체인증 재설정</a>
 									</div>
+
+									<p class="description caution body-large ac mt24">비밀번호가 변경되었다면 <br> 생체인증을 재설정해주세요.</p>
+
 
 								</div>
 								<div id="tab-subpanel02" class="tabpanel">
