--- a/html/PBWFI/PBWFI040000_V2.html
+++ b/html/PBWFI/PBWFI040000_V2.html
@@ -111,9 +111,9 @@
 					<div class="form mt40">
 						<div class="form-exchange block pt20">
 							<div class="label">
-								<button class="flag flag-us" data-micromodal-trigger="modal-select"><strong>USD<span>미국 달러</span></strong></button>
+								<button class="flag flag-us" data-micromodal-trigger="modal-select"><strong>USD</strong><span>미국 달러</span></button>
 							</div>
-							<div class="ex-input-wrap mt4">
+							<div class="ex-input-wrap mt16">
 								<input type="number" placeholder="1">
 								<span class="mt4">1달러</span>
 							</div>
@@ -123,10 +123,11 @@
 
 					<!-- form -->
 					<div class="form mt16">
-						<div class="form-exchange">
-							<div class="label">환율우대율<i class="icon-only icon-24 icon-percent bg-icon-default"></i></div>
-							<div class="ex-input-wrap d-flex">
+						<div class="form-exchange block">
+							<div class="label j-start">환율우대율<i class="icon-only icon-24 icon-percent2"></i></div>
+							<div class="ex-input-wrap mt16">
 								<button type="button" class="anchor chevron anchor-fluid" data-placeholder="없음" data-micromodal-trigger="modal-alert1"></button>
+								<button type="button" class="anchor chevron anchor-fluid" data-micromodal-trigger="modal-alert1">60%</button>
 							</div>
 						</div>
 					</div>
@@ -146,13 +147,13 @@
 							</div>
 							<div class="ex-input-wrap">
 								<div class="d-flex a-center gap4">
-									<input type="text" readonly value="1,427">
-									<span class="bul mt0">/</span>
+									<input type="text" class="fs-24" value="1,427" readonly>
+									<span class="bul mt0 fs-18">/</span>
 									<span class="mt0 nowrap">1,459</span>
 								</div>
 								<div class="d-flex a-center j-end gap4 mt8">
 									<span class="mt0 nowrap">적용환율</span>
-									<span class="bul mt0">/</span>
+									<span class="bul mt0 fs-16">/</span>
 									<span class="mt0 nowrap">우대전</span>
 								</div>
 							</div>
