--- a/html/PBWBU/PBWBU000001.html
+++ b/html/PBWBU/PBWBU000001.html
@@ -89,10 +89,10 @@
 				<!-- content -->
 				<div class="content">
 
-					<p class="description error body-large my24">내 명함은 상대방 동의 없이 마케팅 목적으로 공유할 수 없습니다.</p>
+					<p class="description error body-small fc-typography-caption mt16">내 명함은 상대방 동의 없이 마케팅 목적으로 공유할 수 없습니다.</p>
 
 					<!-- group -->
-					<div class="group content-fluid">
+					<div class="group content-fluid pt10">
 						<div class="right">
 							<button type="button" class="btn-xsmall btn-outlined btn-round" data-micromodal-trigger="modal-businesscard"><i class="ico-order"></i>순서 설정</button>
 						</div>
@@ -100,7 +100,7 @@
 					<!-- //group -->
 
 					<div class="stroke stroke-fluid my0"></div>
-      
+
 					<!-- group -->
 					<div class="group pt24 px4">
 						<strong class="title-medium">별칭명</strong>
