--- a/html/index.html
+++ b/html/index.html
@@ -48,6 +48,17 @@
 						<th>화면ID</th>
 					</tr>
 				</thead>
+
+				<tbody data-folder="components">
+					<tr>
+						<td>퍼블리싱 인수인계</td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">component_handover</a></td>
+					</tr>
+				</tbody>
 				<tbody data-folder="layout">
 					<tr>
 						<td>Layout</td>
