--- a/html/PBWFU/PBWFU000002.html
+++ b/html/PBWFU/PBWFU000002.html
@@ -97,6 +97,12 @@
 						}
 					</style>
 
+					<!-- snackbar-content -->
+					<div class="snackbar-content is-sticky">
+						<button type="button" class="fab fab-secondary fab-circle" aria-label="최상단으로 이동" id="gototop"><i class="ico-gototop"></i></button>
+					</div>
+					<!-- //snackbar-content -->
+
 					<!-- sticky-content -->
 					<div class="sticky-sentinal"></div>
 					<div class="sticky-content content-fluid">
@@ -282,6 +288,8 @@
 						<!-- //fund-card-list -->
 
 					</div>
+
+					<div class="content-padding"></div>
 
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
