--- a/html/PBWAI/PBWAI000000.html
+++ b/html/PBWAI/PBWAI000000.html
@@ -192,7 +192,7 @@
 											</div>
 											<p class="text">통화스왑업무개시</p>
 											<ul class="file-attach-list">
-												<li><a href="#" class="link"><span>불완전 판매사례 안내.hwp</span></a></li>
+												<li><a href="#" class="loading link"><span>불완전 판매사례 안내.hwp</span></a></li>
 												<li><a href="#" data-ext="word" class="link"><span>불완전 판매사례 안내.hwp</span></a></li>
 												<li><a href="#" data-ext="excel" class="link"><span>불완전 판매사례 안내.hwp</span></a></li>
 												<li><a href="#" data-ext="hwp" class="link"><span>불완전 판매사례 안내.hwp</span></a></li>
