--- a/html/index.html
+++ b/html/index.html
@@ -966,6 +966,15 @@
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWAI000000</a></td>
 					</tr>
+					<tr class="for-tablet">
+						<td></td>
+						<td>[Tablet] AI 지식상담</td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWAI000000_tablet</a></td>
+					</tr>
+
 				</tbody>
 				<tbody data-folder="PBWIV">
 					<tr>
