--- a/html/PBWAI/PBWAI000000_tablet.html
+++ b/html/PBWAI/PBWAI000000_tablet.html
@@ -102,7 +102,7 @@
 
 							<!-- Intro -->
 							<div class="chatbody">
-								<div class="message-text left">
+								<div class="message-text message-notice left">
 									<div class="message-group">
 										<p class="text">우리은행 ChatGPT, AI 지식상담입니다. <br> 다음과 같이 구체적으로 물어보시면 도움되는 답변을 받으실 수 있어요</p>
 										<ol class="text">
