--- a/html/PBWBU/PBWBU020001_tablet.html
+++ b/html/PBWBU/PBWBU020001_tablet.html
@@ -88,234 +88,270 @@
 			<div id="container">
 
 				<!-- content -->
-				<div class="content">
+				<div class="content content-tablet content-tablet-row">
 
-					<!-- upload-picture -->
-					<div class="upload-picture mt16">
-						<button type="button" class="upload-picture-anchor" id="modalTrigger" aria-label="이미지 확대보기">
-							<picture>
-								<source srcset="/resources/images/@temp/@business_card.png">
-								<img src="/resources/images/@temp/@business_card.png" alt="">
-							</picture>
-						</button>
-					</div>
-					<!-- //upload-picture -->
+					<!-- content-tablet-left -->
+					<div class="content-tablet-left">
+						<!-- upload-picture -->
+						<div class="upload-picture mt16">
+							<button type="button" class="upload-picture-anchor" id="modalTrigger" aria-label="이미지 확대보기">
+								<picture>
+									<source srcset="/resources/images/@temp/@business_card.png">
+									<img src="/resources/images/@temp/@business_card.png" alt="">
+								</picture>
+							</button>
+						</div>
+						<!-- //upload-picture -->
 
-					<!-- business-card-info -->
-					<div class="business-card-info mt40">
-						<div class="info-title">
-							<div class="info-name">
-								<div class="info-thumb">
-									<picture>
-										<source srcset="/resources/images/ico/ico_profile.svg">
-										<img src="/resources/images/ico/ico_profile.svg" alt="">
-									</picture>
-									<strong class="headline-small">나고객</strong>
-								</div>
-								<button type="button" class="btn-more" data-micromodal-trigger="modal-dropdown-list" aria-label="수정 및 삭제"></button>
-
-							</div>
-							<div class="divide-list mt16 px4">
-								<div class="tags-wrap mr10">
-									<div class="tags tags-medium tags-lightBlue"><i class="icon-only icon-18 icon-keyman"></i>키맨</div>
-								</div>
-								<span>부서명</span>
-								<div class="division h14 mx8"></div>
-								<span>직책</span>
+						<div class="is-tablet">
+							<p class="description error body-small fc-typography-caption my40">등록된 고객명함은 현재 소속 지점으로 등록되어 지점 이동 후에는 조회하실 수 없습니다. <br> 개인정보 또는 부적절한 내용 작성을 금지하며, 마케팅 정보로 이용할 수 없습니다.</p>
+						</div>
+						<!-- bottom-btn -->
+						<div class="bottom-btn">
+							<div class="info-anchor">
+								<ul>
+									<li>
+										<button type="button">
+											<i class="icon-only icon-36 icon-phone bg-status-active"></i>
+											<span>휴대폰</span>
+										</button>
+									</li>
+									<li>
+										<button type="button">
+											<i class="icon-only icon-36 icon-sms bg-status-active"></i>
+											<span>문자</span>
+										</button>
+									</li>
+									<li>
+										<button type="button">
+											<i class="icon-only icon-36 icon-mail bg-status-active"></i>
+											<span>이메일</span>
+										</button>
+									</li>
+									<li>
+										<button type="button">
+											<i class="icon-only icon-36 icon-call bg-status-active"></i>
+											<span>회사전화</span>
+										</button>
+									</li>
+									<li>
+										<button type="button">
+											<i class="icon-only icon-36 icon-memo bg-status-active"></i>
+											<span>메모 </span>
+										</button>
+									</li>
+								</ul>
 							</div>
 						</div>
-						<div class="info-detail-list mt24">
+						<!-- //bottom-btn -->
+
+					</div>
+					<!-- //content-tablet-left -->
+
+					<!-- content-tablet-right -->
+					<div class="content-tablet-right">
+						<!-- business-card-info -->
+						<div class="business-card-info mt40">
+							<div class="info-title">
+								<div class="info-name">
+									<div class="info-thumb">
+										<picture>
+											<source srcset="/resources/images/ico/ico_profile.svg">
+											<img src="/resources/images/ico/ico_profile.svg" alt="">
+										</picture>
+										<strong class="headline-small">나고객</strong>
+									</div>
+									<button type="button" class="btn-more" data-micromodal-trigger="modal-dropdown-list" aria-label="수정 및 삭제"></button>
+								</div>
+								<div class="divide-list mt16 px4">
+									<div class="tags-wrap mr10">
+										<div class="tags tags-medium tags-lightBlue"><i class="icon-only icon-18 icon-keyman"></i>키맨</div>
+									</div>
+									<span>부서명</span>
+									<div class="division h14 mx8"></div>
+									<span>직책</span>
+								</div>
+							</div>
+							<div class="info-detail-list mt24">
+								<div class="info-table">
+									<div class="info-body">
+										<div class="info-row">
+											<div class="info-th">회사</div>
+											<div class="info-td">
+												<div class="group gap10 py0">
+													<span>회사이름</span>
+													<a href="#" class="anchor chevron fs-16">기업조회</a>
+												</div>
+											</div>
+										</div>
+										<div class="info-row">
+											<div class="info-th">휴대폰</div>
+											<div class="info-td">010-****-5736</div>
+										</div>
+										<div class="info-row">
+											<div class="info-th">이메일</div>
+											<div class="info-td">**c@a**.com</div>
+										</div>
+										<div class="info-row">
+											<div class="info-th">전화번호</div>
+											<div class="info-td">02-****-5678</div>
+										</div>
+										<div class="info-row">
+											<div class="info-th">팩스번호</div>
+											<div class="info-td">02-****-4321</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- //business-card-info -->
+						<!-- group -->
+						<div class="group py0 px4 mt24">
+							<strong class="title-large">메모</strong>
+						</div>
+						<!-- group -->
+						<!-- memo-list -->
+						<div class="memo-list mt8">
+							<div class="memo-inner" data-toggle="toggle-wrap">
+								<div class="tag-wrap mb12">
+									<div class="tags tags-small tags-white tags-round">나만보기</div>
+								</div>
+								<p data-line="3">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
+								<div class="memo-btn">
+									<div class="left">
+										<button type="button" class="anchor chevron chevron-down fs-15" data-toggle="toggle-trigger" data-switch-before="chevron-down" data-switch-after="chevron-up">
+											<span class="toggle-off">더보기</span>
+											<span class="toggle-on">접기</span>
+										</button>
+									</div>
+									<div class="right">
+										<button type="button" class="btn-noborder"><i class="ico-modify"></i>수정</button>
+										<button type="button" class="btn-noborder"><i class="ico-delete"></i>삭제</button>
+									</div>
+								</div>
+								<dl>
+									<dt>작성자이름</dt>
+									<dd>2024-11-06 10:48</dd>
+								</dl>
+								<div class="divide-list">
+									<span>부서명</span>
+									<div class="division h14 mx8"></div>
+									<span>부서명</span>
+								</div>
+							</div>
+							<div class="memo-inner" data-toggle="toggle-wrap">
+								<p data-line="3">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
+								<div class="memo-btn">
+									<div class="left">
+										<button type="button" class="anchor chevron chevron-down fs-15" data-toggle="toggle-trigger" data-switch-before="chevron-down" data-switch-after="chevron-up">
+											<span class="toggle-off">더보기</span>
+											<span class="toggle-on">접기</span>
+										</button>
+									</div>
+									<div class="right">
+										<button type="button" class="btn-noborder"><i class="ico-modify"></i>수정</button>
+										<button type="button" class="btn-noborder"><i class="ico-delete"></i>삭제</button>
+									</div>
+								</div>
+								<dl>
+									<dt>작성자이름</dt>
+									<dd>2024-11-06 10:48</dd>
+								</dl>
+								<div class="divide-list">
+									<span>부서명</span>
+									<div class="division h14 mx8"></div>
+									<span>부서명</span>
+								</div>
+							</div>
+						</div>
+						<!-- //memo-list -->
+						<div class="btn-wrap">
+							<button type="button" class="btn-xsmall btn-outlined btn-round" data-micromodal-trigger="modal-memo">전체보기</button>
+						</div>
+						<!-- nodata-wrap -->
+						<div class="nodata-wrap mt8 py32">
+							<p class="description caution body-large ac">등록된 메모가 없습니다.</p>
+							<div class="btn-wrap pb0">
+								<button type="button" class="btn-xsmall btn-outlined btn-round" data-micromodal-trigger="modal-memo-write"><i class="ico-memo"></i>메모 등록</button>
+							</div>
+						</div>
+						<!-- //nodata-wrap -->
+						<div class="stroke my24"></div>
+						<!-- group -->
+						<div class="group py0 px4">
+							<strong class="title-large">등록/만료 정보</strong>
+							<button type="button" class="anchor chevron fs-16" data-micromodal-trigger="modal-bscard-change-history">변경 내역</button>
+						</div>
+						<!-- group -->
+						<!-- info-detail-list -->
+						<div class="info-detail-list mt10 pb32">
 							<div class="info-table">
 								<div class="info-body">
 									<div class="info-row">
-										<div class="info-th">회사</div>
+										<div class="info-th">등록자</div>
 										<div class="info-td">
-											<div class="group gap10 py0">
-												<span>회사이름</span>
-												<a href="#" class="anchor chevron fs-16">기업조회</a>
+											<div>나우리</div>
+											<div class="divide-list mt4">
+												<span>부서명</span>
+												<div class="division h14 mx8"></div>
+												<span>직책</span>
 											</div>
 										</div>
 									</div>
 									<div class="info-row">
-										<div class="info-th">휴대폰</div>
-										<div class="info-td">010-****-5736</div>
+										<div class="info-th">공유일</div>
+										<div class="info-td">2024-11-22</div>
 									</div>
 									<div class="info-row">
-										<div class="info-th">이메일</div>
-										<div class="info-td">**c@a**.com</div>
+										<div class="info-th">최종수정자</div>
+										<div class="info-td">
+											<div>나은행</div>
+											<div class="divide-list mt4">
+												<span>부서명</span>
+												<div class="division h14 mx8"></div>
+												<span>직책</span>
+											</div>
+										</div>
 									</div>
 									<div class="info-row">
-										<div class="info-th">전화번호</div>
-										<div class="info-td">02-****-5678</div>
+										<div class="info-th">최종수정일</div>
+										<div class="info-td">2024-11-22</div>
 									</div>
 									<div class="info-row">
-										<div class="info-th">팩스번호</div>
-										<div class="info-td">02-****-4321</div>
-									</div>
-								</div>
-							</div>
-						</div>
-
-					</div>
-					<!-- //business-card-info -->
-
-
-
-					<!-- group -->
-					<div class="group py0 px4 mt24">
-						<strong class="title-large">메모</strong>
-					</div>
-					<!-- group -->
-
-
-					<!-- memo-list -->
-					<div class="memo-list mt8">
-						<div class="memo-inner" data-toggle="toggle-wrap">
-							<div class="tag-wrap mb12">
-								<div class="tags tags-small tags-white tags-round">나만보기</div>
-							</div>
-							<p data-line="3">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
-							<div class="memo-btn">
-								<div class="left">
-									<button type="button" class="anchor chevron chevron-down fs-15" data-toggle="toggle-trigger" data-switch-before="chevron-down" data-switch-after="chevron-up">
-										<span class="toggle-off">더보기</span>
-										<span class="toggle-on">접기</span>
-									</button>
-								</div>
-								<div class="right">
-									<button type="button" class="btn-noborder"><i class="ico-modify"></i>수정</button>
-									<button type="button" class="btn-noborder"><i class="ico-delete"></i>삭제</button>
-								</div>
-							</div>
-							<dl>
-								<dt>작성자이름</dt>
-								<dd>2024-11-06 10:48</dd>
-							</dl>
-							<div class="divide-list">
-								<span>부서명</span>
-								<div class="division h14 mx8"></div>
-								<span>부서명</span>
-							</div>
-						</div>
-						<div class="memo-inner" data-toggle="toggle-wrap">
-							<p data-line="3">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
-							<div class="memo-btn">
-								<div class="left">
-									<button type="button" class="anchor chevron chevron-down fs-15" data-toggle="toggle-trigger" data-switch-before="chevron-down" data-switch-after="chevron-up">
-										<span class="toggle-off">더보기</span>
-										<span class="toggle-on">접기</span>
-									</button>
-								</div>
-								<div class="right">
-									<button type="button" class="btn-noborder"><i class="ico-modify"></i>수정</button>
-									<button type="button" class="btn-noborder"><i class="ico-delete"></i>삭제</button>
-								</div>
-							</div>
-							<dl>
-								<dt>작성자이름</dt>
-								<dd>2024-11-06 10:48</dd>
-							</dl>
-							<div class="divide-list">
-								<span>부서명</span>
-								<div class="division h14 mx8"></div>
-								<span>부서명</span>
-							</div>
-						</div>
-					</div>
-					<!-- //memo-list -->
-
-					<div class="btn-wrap">
-						<button type="button" class="btn-xsmall btn-outlined btn-round" data-micromodal-trigger="modal-memo">전체보기</button>
-					</div>
-
-					<!-- nodata-wrap -->
-					<div class="nodata-wrap mt8 py32">
-						<p class="description caution body-large ac">등록된 메모가 없습니다.</p>
-						<div class="btn-wrap pb0">
-							<button type="button" class="btn-xsmall btn-outlined btn-round" data-micromodal-trigger="modal-memo-write"><i class="ico-memo"></i>메모 등록</button>
-						</div>
-					</div>
-					<!-- //nodata-wrap -->
-
-
-					<div class="stroke my24"></div>
-
-
-					<!-- group -->
-					<div class="group py0 px4">
-						<strong class="title-large">등록/만료 정보</strong>
-						<button type="button" class="anchor chevron fs-16" data-micromodal-trigger="modal-bscard-change-history">변경 내역</button>
-					</div>
-					<!-- group -->
-
-					<!-- info-detail-list -->
-					<div class="info-detail-list mt10 pb32">
-						<div class="info-table">
-							<div class="info-body">
-								<div class="info-row">
-									<div class="info-th">등록자</div>
-									<div class="info-td">
-										<div>나우리</div>
-										<div class="divide-list mt4">
-											<span>부서명</span>
-											<div class="division h14 mx8"></div>
-											<span>직책</span>
+										<div class="info-th">만료일</div>
+										<div class="info-td">
+											<div class="group gap8 py0 j-start flex-wrap">
+												<div>2024-11-22</div>
+												<div class="tags tags-small tags-lightRed">삭제예정</div>
+												<button type="button" class="btn-xsmall btn-outlined btn-round">연장</button>
+											</div>
 										</div>
 									</div>
-								</div>
-								<div class="info-row">
-									<div class="info-th">공유일</div>
-									<div class="info-td">2024-11-22</div>
-								</div>
-								<div class="info-row">
-									<div class="info-th">최종수정자</div>
-									<div class="info-td">
-										<div>나은행</div>
-										<div class="divide-list mt4">
-											<span>부서명</span>
-											<div class="division h14 mx8"></div>
-											<span>직책</span>
-										</div>
-									</div>
-								</div>
-								<div class="info-row">
-									<div class="info-th">최종수정일</div>
-									<div class="info-td">2024-11-22</div>
-								</div>
-								<div class="info-row">
-									<div class="info-th">만료일</div>
-									<div class="info-td">
-										<div class="group gap8 py0 j-start flex-wrap">
-											<div>2024-11-22</div>
-											<div class="tags tags-small tags-lightRed">삭제예정</div>
-											<button type="button" class="btn-xsmall btn-outlined btn-round">연장</button>
-										</div>
-									</div>
-								</div>
-								<div class="info-row">
-									<div class="info-th">만료일</div>
-									<div class="info-td">
-										<div class="group gap8 py0 j-start flex-wrap">
-											<div>2024-11-22</div>
-											<div class="tags tags-small tags-lightBlue">D-30</div>
-											<button type="button" class="btn-xsmall btn-outlined btn-round">연장</button>
+									<div class="info-row">
+										<div class="info-th">만료일</div>
+										<div class="info-td">
+											<div class="group gap8 py0 j-start flex-wrap">
+												<div>2024-11-22</div>
+												<div class="tags tags-small tags-lightBlue">D-30</div>
+												<button type="button" class="btn-xsmall btn-outlined btn-round">연장</button>
+											</div>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
+						<!-- //info-detail-list -->
+						<div class="is-mobile">
+							<p class="description error body-small fc-typography-caption my40">등록된 고객명함은 현재 소속 지점으로 등록되어 지점 이동 후에는 조회하실 수 없습니다. <br> 개인정보 또는 부적절한 내용 작성을 금지하며, 마케팅 정보로 이용할 수 없습니다.</p>
+						</div>
+						<!-- btn-wrap -->
+						<!-- <div class="btn-wrap">
+                            <button type="button" class="btn-large btn-outlined">삭제</button>
+                            <button type="button" class="btn-large btn-primary">수정</button>
+                        </div> -->
+						<!-- //btn-wrap -->
 					</div>
-					<!-- //info-detail-list -->
-
-					<p class="description error body-small fc-typography-caption my40">등록된 고객명함은 현재 소속 지점으로 등록되어 지점 이동 후에는 조회하실 수 없습니다. <br> 개인정보 또는 부적절한 내용 작성을 금지하며, 마케팅 정보로 이용할 수 없습니다.</p>
-
-					<!-- btn-wrap -->
-					<!-- <div class="btn-wrap">
-						<button type="button" class="btn-large btn-outlined">삭제</button>
-						<button type="button" class="btn-large btn-primary">수정</button>
-					</div> -->
-					<!-- //btn-wrap -->
-
+					<!-- //content-tablet-right -->
 				</div>
 				<!-- //content -->
 
@@ -331,44 +367,7 @@
 		<!-- //main-inner -->
 
 
-		<!-- bottom-btn -->
-		<div class="bottom-btn">
-			<div class="info-anchor">
-				<ul>
-					<li>
-						<button type="button">
-							<i class="icon-only icon-36 icon-phone bg-status-active"></i>
-							<span>휴대폰</span>
-						</button>
-					</li>
-					<li>
-						<button type="button">
-							<i class="icon-only icon-36 icon-sms bg-status-active"></i>
-							<span>문자</span>
-						</button>
-					</li>
-					<li>
-						<button type="button">
-							<i class="icon-only icon-36 icon-mail bg-status-active"></i>
-							<span>이메일</span>
-						</button>
-					</li>
-					<li>
-						<button type="button">
-							<i class="icon-only icon-36 icon-call bg-status-active"></i>
-							<span>회사전화</span>
-						</button>
-					</li>
-					<li>
-						<button type="button">
-							<i class="icon-only icon-36 icon-memo bg-status-active"></i>
-							<span>메모 </span>
-						</button>
-					</li>
-				</ul>
-			</div>
-		</div>ˇ
-		<!-- //bottom-btn -->
+
 
 	</main>
 	<!-- //main -->
@@ -405,7 +404,7 @@
 
 
 	<!-- micromodal -->
-	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-memo">
+	<div class="micromodal-slide micromodal-slide-bottom micromodal-slide-bottom-right-full modal" id="modal-memo">
 		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
 			<div class="modal__container" role="dialog" aria-modal="true">
 
@@ -520,7 +519,7 @@
 
 
 	<!-- micromodal -->
-	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-bscard-change-history">
+	<div class="micromodal-slide micromodal-slide-bottom micromodal-slide-bottom-right-full modal" id="modal-bscard-change-history">
 		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
 			<div class="modal__container" role="dialog" aria-modal="true">
 
