--- a/html/index.html
+++ b/html/index.html
@@ -494,6 +494,14 @@
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWBU010001</a></td>
 					</tr>
+					<tr class="for-tablet">
+						<td></td>
+						<td></td>
+						<td>[Tablet] 고객 명함 관리</td>
+						<td>목록</td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWBU010001_tablet</a></td>
+					</tr>
 					<tr>
 						<td></td>
 						<td></td>
