--- a/html/index.html
+++ b/html/index.html
@@ -535,6 +535,15 @@
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWBU020001</a></td>
 					</tr>
+					<tr class="for-tablet">
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>[Tablet] 상세</td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWBU020001_tablet</a></td>
+					</tr>
+
 					<tr>
 						<td></td>
 						<td></td>
